# ml-note

./: .gitignore  CLAUDE.md  README.md  config.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/en/: index.md
docs/en/deep-learning/: cnn.md  nn-fundamentals.md  normalization.md  rnn.md  training.md
docs/en/fundamentals/: bias-variance.md  data-splits.md  generalization.md  learning-paradigms.md  loss-functions.md  optimization.md  regularization.md
docs/en/interview/: common-questions.md  quick-reference.md
docs/en/models/: clustering.md  decision-trees.md  dimensionality-reduction.md  ensemble.md  knn.md  linear-regression.md  logistic-regression.md  naive-bayes.md  svm.md
docs/en/practical/: class-imbalance.md  data-centric.md  feature-engineering.md  interpretability.md  metrics.md  mlops.md
docs/zh/: index.md
docs/zh/deep-learning/: cnn.md  nn-fundamentals.md  normalization.md  rnn.md  training.md
docs/zh/fundamentals/: bias-variance.md  data-splits.md  generalization.md  learning-paradigms.md  loss-functions.md  optimization.md  regularization.md
docs/zh/interview/: common-questions.md  (+1 more)
ml_examples/: __init__.py  calibration.py  clustering.py  decision_tree.py  ensemble.py  linear_regression.py  logistic_regression.py  neural_network.py  pca.py  run.py  svm.py
qa/: __init__.py  ask.py  index.py  patch.py  validate.py
qa_workflow/: README.md
qa_workflow/proposals/: example.yaml
site_generator/: __init__.py  build.py
skills/: __init__.py  extract.py  template.yaml
validators/: __init__.py  main.py
(+15 files in other folders)
